[gd_scene load_steps=36 format=3 uid="uid://c1vg7l7e4s21k"]

[ext_resource type="Texture2D" uid="uid://7d6huvifg8k" path="res://assets/topiSprite.png" id="1_l46iw"]
[ext_resource type="Script" uid="uid://nc16jhqfwqn0" path="res://scripts/result_screen.gd" id="1_wrniu"]
[ext_resource type="Texture2D" uid="uid://7tx1p83pl0pc" path="res://assets/nitpickerSprite.png" id="3_nj5ho"]
[ext_resource type="Texture2D" uid="uid://cpisp8lddnv6o" path="res://assets/blocks.png" id="4_et5d2"]
[ext_resource type="Shader" uid="uid://72f6w04l8se8" path="res://shaders/jogador.gdshader" id="5_bsfim"]
[ext_resource type="Texture2D" uid="uid://c2t1f4mxsr8wd" path="res://assets/vegetablesSprite.png" id="5_et5d2"]
[ext_resource type="Texture2D" uid="uid://bubq64k4ebr7o" path="res://assets/playerSprite.png" id="6_46yes"]
[ext_resource type="AudioStream" uid="uid://dvpmw5aioy3gh" path="res://sfx/15-jump.mp3" id="8_et5d2"]
[ext_resource type="AudioStream" uid="uid://cwa3o7dwuv1io" path="res://sfx/11-score.mp3" id="9_bsfim"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4stdu"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 15
border_width_top = 15
border_width_right = 15
border_width_bottom = 15
border_color = Color(0, 0.439216, 0.92549, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y7kih"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.235294, 0.737255, 0.988235, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p64tj"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.988235, 0.988235, 0.988235, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ns57g"]
shader = ExtResource("5_bsfim")
shader_parameter/find_color = Color(0.0509804, 0.301961, 0.768627, 1)
shader_parameter/target_color = Color(0.615686, 0.109804, 0.282353, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_idw05"]
atlas = ExtResource("6_46yes")
region = Rect2(132, 0, 21, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0uqc4"]
atlas = ExtResource("6_46yes")
region = Rect2(154, 0, 21, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c5o7a"]
atlas = ExtResource("6_46yes")
region = Rect2(176, 0, 21, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g1ob3"]
atlas = ExtResource("6_46yes")
region = Rect2(220, 33, 21, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_veqpd"]
atlas = ExtResource("6_46yes")
region = Rect2(132, 0, 21, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ooqne"]
atlas = ExtResource("6_46yes")
region = Rect2(0, 0, 21, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4giny"]
atlas = ExtResource("6_46yes")
region = Rect2(110, 0, 21, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iojyl"]
atlas = ExtResource("6_46yes")
region = Rect2(132, 33, 21, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_62j3s"]
atlas = ExtResource("6_46yes")
region = Rect2(154, 33, 21, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqdkg"]
atlas = ExtResource("6_46yes")
region = Rect2(22, 0, 21, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vn6rc"]
atlas = ExtResource("6_46yes")
region = Rect2(44, 0, 21, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iimds"]
atlas = ExtResource("6_46yes")
region = Rect2(66, 0, 21, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rdeuo"]
atlas = ExtResource("6_46yes")
region = Rect2(88, 0, 21, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0a5f6"]
atlas = ExtResource("6_46yes")
region = Rect2(176, 33, 21, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_42umv"]
atlas = ExtResource("6_46yes")
region = Rect2(198, 33, 21, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_16632"]
animations = [{
"frames": [{
"duration": 1.4,
"texture": SubResource("AtlasTexture_idw05")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_0uqc4")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_c5o7a")
}],
"loop": false,
"name": &"attack",
"speed": 14.0
}, {
"frames": [{
"duration": 10.0,
"texture": SubResource("AtlasTexture_g1ob3")
}],
"loop": true,
"name": &"death",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_veqpd")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ooqne")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4giny")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iojyl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_62j3s")
}],
"loop": true,
"name": &"lose",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqdkg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vn6rc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iimds")
}],
"loop": true,
"name": &"run",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rdeuo")
}],
"loop": true,
"name": &"stop",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0a5f6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_42umv")
}],
"loop": true,
"name": &"win",
"speed": 1.5
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_vrrhk"]
atlas = ExtResource("1_l46iw")
region = Rect2(0, 0, 16.1226, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6p7tg"]
atlas = ExtResource("5_et5d2")
region = Rect2(-0.0655956, -0.126398, 16.1722, 16.6385)

[sub_resource type="AtlasTexture" id="AtlasTexture_cba7x"]
atlas = ExtResource("3_nj5ho")
region = Rect2(0, 0, 16.1063, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_o2u88"]
atlas = ExtResource("4_et5d2")
region = Rect2(17.7669, 44.8021, 8.48224, 8.36072)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jvw6c"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.235294, 0.737255, 0.988235, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7yvg5"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.988235, 0.988235, 0.988235, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="resultScreen" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wrniu")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(200, 200)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -833.0
offset_top = -427.5
offset_right = 833.0
offset_bottom = 427.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100
alignment = 1

[node name="LeftPanelOut" type="Panel" parent="HBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_4stdu")

[node name="LeftPanelMiddle" type="Panel" parent="HBoxContainer/LeftPanelOut"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.5
offset_top = -404.0
offset_right = 225.5
offset_bottom = 404.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_y7kih")

[node name="LeftPanelIn" type="Panel" parent="HBoxContainer/LeftPanelOut/LeftPanelMiddle"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -206.5
offset_top = -384.5
offset_right = 206.5
offset_bottom = 384.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_p64tj")

[node name="PlayerLabel" type="Label" parent="HBoxContainer/LeftPanelOut/LeftPanelMiddle/LeftPanelIn"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -180.0
offset_top = 28.5
offset_right = 180.0
offset_bottom = 68.5
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "PLAYER 1"

[node name="Sprite" type="AnimatedSprite2D" parent="HBoxContainer/LeftPanelOut/LeftPanelMiddle/LeftPanelIn"]
texture_filter = 1
texture_repeat = 1
material = SubResource("ShaderMaterial_ns57g")
use_parent_material = true
position = Vector2(147.5, 139.5)
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_16632")
animation = &"lose"
autoplay = "idle"
frame_progress = 0.992271

[node name="ResultText" type="Label" parent="HBoxContainer/LeftPanelOut/LeftPanelMiddle/LeftPanelIn"]
layout_mode = 0
offset_left = 208.0
offset_top = 134.0
offset_right = 389.0
offset_bottom = 229.0
theme_override_font_sizes/font_size = 30
text = "YOU WIN!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="SpriteContainer" type="VBoxContainer" parent="HBoxContainer/LeftPanelOut/LeftPanelMiddle/LeftPanelIn"]
layout_mode = 2
offset_left = 18.5
offset_top = 257.5
offset_right = 50.5
offset_bottom = 444.5
scale = Vector2(1.8, 1.8)
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 24
alignment = 1

[node name="SpriteTopi" type="TextureRect" parent="HBoxContainer/LeftPanelOut/LeftPanelMiddle/LeftPanelIn/SpriteContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = SubResource("AtlasTexture_vrrhk")
flip_h = true

[node name="SpriteVeggie" type="TextureRect" parent="HBoxContainer/LeftPanelOut/LeftPanelMiddle/LeftPanelIn/SpriteContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = SubResource("AtlasTexture_6p7tg")

[node name="SpriteNitpicker" type="TextureRect" parent="HBoxContainer/LeftPanelOut/LeftPanelMiddle/LeftPanelIn/SpriteContainer"]
clip_contents = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = SubResource("AtlasTexture_cba7x")
expand_mode = 1

[node name="SpriteBlock" type="TextureRect" parent="HBoxContainer/LeftPanelOut/LeftPanelMiddle/LeftPanelIn/SpriteContainer"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = SubResource("AtlasTexture_o2u88")

[node name="ScoreContainer" type="HBoxContainer" parent="HBoxContainer/LeftPanelOut/LeftPanelMiddle/LeftPanelIn"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -108.0
offset_top = -100.0
offset_right = 192.0
offset_bottom = 204.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 60

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer/LeftPanelOut/LeftPanelMiddle/LeftPanelIn/ScoreContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 60

[node name="TopiScore" type="Label" parent="HBoxContainer/LeftPanelOut/LeftPanelMiddle/LeftPanelIn/ScoreContainer/VBoxContainer2"]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "300 X"

[node name="VeggieScore" type="Label" parent="HBoxContainer/LeftPanelOut/LeftPanelMiddle/LeftPanelIn/ScoreContainer/VBoxContainer2"]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "400 X"

[node name="BirdScore" type="Label" parent="HBoxContainer/LeftPanelOut/LeftPanelMiddle/LeftPanelIn/ScoreContainer/VBoxContainer2"]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "800 X"

[node name="BlockScore" type="Label" parent="HBoxContainer/LeftPanelOut/LeftPanelMiddle/LeftPanelIn/ScoreContainer/VBoxContainer2"]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "10  X"

[node name="VBoxContainer3" type="VBoxContainer" parent="HBoxContainer/LeftPanelOut/LeftPanelMiddle/LeftPanelIn/ScoreContainer"]
custom_minimum_size = Vector2(90, 0)
layout_direction = 3
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 60

[node name="TopiQte" type="Label" parent="HBoxContainer/LeftPanelOut/LeftPanelMiddle/LeftPanelIn/ScoreContainer/VBoxContainer3"]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "0"

[node name="VeggieQte" type="Label" parent="HBoxContainer/LeftPanelOut/LeftPanelMiddle/LeftPanelIn/ScoreContainer/VBoxContainer3"]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "0"

[node name="BirdQte" type="Label" parent="HBoxContainer/LeftPanelOut/LeftPanelMiddle/LeftPanelIn/ScoreContainer/VBoxContainer3"]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "0"

[node name="BlockQte" type="Label" parent="HBoxContainer/LeftPanelOut/LeftPanelMiddle/LeftPanelIn/ScoreContainer/VBoxContainer3"]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "0"

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/LeftPanelOut/LeftPanelMiddle/LeftPanelIn"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -179.5
offset_top = -127.0
offset_right = 181.5
offset_bottom = -13.0
grow_horizontal = 2
grow_vertical = 0

[node name="TotalLabel" type="Label" parent="HBoxContainer/LeftPanelOut/LeftPanelMiddle/LeftPanelIn/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "TOTAL"
horizontal_alignment = 1

[node name="Panel" type="Panel" parent="HBoxContainer/LeftPanelOut/LeftPanelMiddle/LeftPanelIn/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jvw6c")

[node name="Panel" type="Panel" parent="HBoxContainer/LeftPanelOut/LeftPanelMiddle/LeftPanelIn/VBoxContainer/Panel"]
custom_minimum_size = Vector2(130, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -172.0
offset_top = -22.0
offset_right = 172.0
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7yvg5")

[node name="FinalScore" type="Label" parent="HBoxContainer/LeftPanelOut/LeftPanelMiddle/LeftPanelIn/VBoxContainer/Panel/Panel"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -66.0
offset_top = -19.0
offset_right = 67.0
offset_bottom = 23.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel2" type="Panel" parent="HBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2

[node name="winSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_et5d2")

[node name="loseSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_bsfim")

[node name="ScoreCount" type="Timer" parent="."]
autostart = true

[node name="ScorePause" type="Timer" parent="."]
wait_time = 0.9
one_shot = true

[connection signal="animation_looped" from="HBoxContainer/LeftPanelOut/LeftPanelMiddle/LeftPanelIn/Sprite" to="." method="_on_sprite_animation_looped"]
[connection signal="frame_changed" from="HBoxContainer/LeftPanelOut/LeftPanelMiddle/LeftPanelIn/Sprite" to="." method="_on_sprite_frame_changed"]
[connection signal="timeout" from="ScoreCount" to="." method="_on_score_count_timeout"]
[connection signal="timeout" from="ScorePause" to="." method="_on_score_pause_timeout"]
